force-app/main/default/objects/Shipping_Estimate_Configuration__c/Shipping_Estimate_Configuration__c.object-meta.xml
<CustomObject>
    <label>Shipping Estimate Configuration</label>
    <nameField>
        <label>Shipping Estimate Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Estimate Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>