force-app/main/default/objects/Shipping_Estimate_Configuration__c/fields/Display_Review_Screen__c.field-meta.xml
<CustomField>
    <fullName>Display_Review_Screen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Review Screen</label>
    <type>Checkbox</type>
</CustomField>