force-app/main/default/objects/Shipping_Estimate_Configuration__c/fields/Enable_Shipping_Rate_as_LineItem__c.field-meta.xml
<CustomField>
    <fullName>Enable_Shipping_Rate_as_LineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Shipping Rate as LineItem?</label>
    <type>Checkbox</type>
</CustomField>