force-app/main/default/objects/Shipping_Estimate_Configuration__c/fields/Field_Details_w_Json_Format__c.field-meta.xml
<CustomField>
    <fullName>Field_Details_w_Json_Format__c</fullName>
    <label>Field Details w/ Json Format</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>