force-app/main/default/objects/Shipping_Estimate_Configuration__c/fields/Show_Group_By_Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Show_Group_By_Shipping_Carrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Group By Shipping Carrier?</label>
    <type>Checkbox</type>
</CustomField>