force-app/main/default/objects/Shipping_Estimate_Configuration__c/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <label>SObject Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>